--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,21 @@
 <!doctype html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>slimer popup</title>
+  </head>
+  <body>
+    <img src="http://www.fillmurray.com/284/196" alt="" />
+    <script src="popup.js" charset="utf-8"></script>
+  </body>
+</html>
 <!--
  This page is shown when the extension button is clicked, because the
  "browser_action" field in manifest.json contains the "default_popup" key with
  value "popup.html".
  -->
-<html>
+<!-- <html>
   <head>
     <title>Getting Started Extension's Popup</title>
     <style>
@@ -21,17 +32,17 @@
       }
     </style>
 
-    <!--
+
       - JavaScript and HTML must be in separate files: see our Content Security
       - Policy documentation[1] for details and explanation.
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-     <script src="reddithqg.json" charset="utf-8"></script>
-    <script src="popup.js"></script>
+    <!-- <script src="reddithqg.json" charset="utf-8"></script> -->
+    <!-- <script src="popup.js"></script>
   </head>
   <body>
     <div id="status"></div>
     <img id="image-result" hidden>
   </body>
-</html>
+</html> --> -->
